@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-02T01:15:18Z",
-  "count_outdated" : 1970,
-  "uniques_outdated" : 1208,
-  "count" : 1986,
-  "uniques" : 1224,
+  "timestamp" : "2025-10-03T01:15:05Z",
+  "count_outdated" : 1971,
+  "uniques_outdated" : 1209,
+  "count" : 1987,
+  "uniques" : 1225,
   "clones" : [
-    {
-      "timestamp": "2025-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-21T00:00:00Z",
       "count": 2,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-10-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
