@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2025-09-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-21T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-10-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
