@@ -1,3 +1,12 @@
+2025-10-03T01:15:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18210009482 # 785
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
+* notice: last 14d: unq all: 7 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 1208 1970 / 1224 1986
+* notice: next accum: outdated-unq outdated-all / unq all: 1209 1971 / 1225 1987
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-19] / [2025-10-02]
+
 2025-10-02T01:15:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18180352051 # 784
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-02
